# clinical-trial-matcher

./: README.md  pyproject.toml  requirements.txt
clinical_trial_matcher/data/: loader.py
clinical_trial_matcher/model/: embeddings.py
scripts/: dashboard.py  initial_data_loading.py
