[project]
name = "clinical-trial-matcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammadreza Mohagheghi Nejad",email = "m.mohaghegh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=1.22.0,<2.0.0)",
    "transformers (>=4.15.0,<5.0.0)",
    "torch (>=2.1.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
